# kobbelt_subdivision

./: .gitmodules  CMakeLists.txt  README.md
include/: kobbelt_subdivision.hpp
src/: kobbelt_subdivision.cpp  main.cpp
